2016-07-11  Dan Bernstein  <mitz@apple.com>

        Cleaned up API availability.

        Requested by Tim Horton.

        * UIProcess/API/Cocoa/WKNavigationAction.mm:
        * UIProcess/API/Cocoa/WKNavigationActionPrivate.h:

2016-07-11  Enrica Casucci  <enrica@apple.com>

        Add synthetic click origin to WKNavigationAction.
        https://bugs.webkit.org/show_bug.cgi?id=159584
        rdar://problem/25610422

        Reviewed by Tim Horton.

        Adds a private property to WKNavigationAction to retrieve
        the origin of the synthetic click.

        * Shared/NavigationActionData.cpp:
        (WebKit::NavigationActionData::encode):
        (WebKit::NavigationActionData::decode):
        * Shared/NavigationActionData.h:
        * Shared/WebEvent.h:
        (WebKit::WebMouseEvent::button):
        (WebKit::WebMouseEvent::menuTypeForEvent):
        (WebKit::WebMouseEvent::force):
        (WebKit::WebMouseEvent::syntheticClickType):
        * Shared/WebMouseEvent.cpp:
        (WebKit::WebMouseEvent::WebMouseEvent):
        (WebKit::WebMouseEvent::encode):
        (WebKit::WebMouseEvent::decode):
        * Shared/mac/WebEventFactory.mm:
        (WebKit::WebEventFactory::createWebMouseEvent):
        (WebKit::WebEventFactory::createWebWheelEvent):
        * UIProcess/API/APINavigationAction.h:
        * UIProcess/API/Cocoa/WKNavigationAction.mm:
        (toWKNavigationType):
        (toWKSyntheticClickType):
        (-[WKNavigationAction description]):
        (-[WKNavigationAction sourceFrame]):
        (-[WKNavigationAction request]):
        (-[WKNavigationAction _syntheticClickType]):
        (-[WKNavigationAction modifierFlags]):
        * UIProcess/API/Cocoa/WKNavigationActionPrivate.h:
        * UIProcess/WebPageProxy.h:
        * UIProcess/ios/WKContentViewInteraction.mm:
        (-[WKContentView _twoFingerSingleTapGestureRecognized:]):
        (-[WKContentView _longPressRecognized:]):
        * UIProcess/ios/WebPageProxyIOS.mm: